[package]
name = "image_opening"
version = "0.1.0"
authors = ["Rafał Mikrut <mikrutrafal@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { git = "https://github.com/image-rs/image" }

[profile.release]
debug = true
panic = "abort"
lto = "fat"