[package]
name = "image_opening"
version = "0.1.1"
authors = ["Rafał Mikrut <mikrutrafal@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"

[profile.release]
debug = true
panic = "abort"
lto = "fat"
